Review Request 17405 revert change to tomcat base